(equipment) Break URLs at all letters to prevent overflowing change list

--- a/src/app/features/equipment/components/item-edit-proposal/item-edit-proposal.component.scss
+++ b/src/app/features/equipment/components/item-edit-proposal/item-edit-proposal.component.scss
@@ -105,6 +105,10 @@
             max-width: 250px;
           }
 
+          a {
+            word-break: break-all;
+          }
+
           ::ng-deep {
             img {
               max-width: 100%;
